--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,6 +7,44 @@ tons de cores
 #a19e90
 #939394
  */
- body{
-    
- }
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+body,html{
+    background-image:linear-gradient( to left, #4d4233d7,#796451,#838074);
+    height:100vh;
+    width:100vw;
+}
+main{
+    height:100vh;
+    width:100vw;
+}
+section#login{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    overflow: hidden;
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
+
+
+    background-color: white;
+    border-radius: 20px;
+    width: 250px;
+    height: 500px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.767);
+}
+section#login > div#imagens{
+    background: #796451 url(../imagens/pexels-yash-lucid-1466335.jpg) no-repeat;
+    background-size: cover;
+    height: 200px;
+    display: block;
+}
+section#login > div#formulario{
+    padding: 10px;
+    display: block;
+}
