--- a/estilos/medias.css
+++ b/estilos/medias.css
@@ -1,5 +1,13 @@
 @charset "UTF-8";
+@media screen and (min-width:459px) and (max-width:768px){
+    header>h1{
+        transform: translate(-10%,13%);
+    }
+}
 @media screen and (min-width:768px) and (max-width:992px){
+    header>h1{
+        transform: translate(-16%,100%);
+    }
     body{
         background-image: linear-gradient(to right, #4d4233d7,#7964519c,#49463e);
     }
@@ -20,6 +28,9 @@
 @media screen and (min-width:992px){
     body{
         background-image: linear-gradient(to right, #4d4233d7,#796451be,#413e34);
+    }
+    header>h1{
+        transform: translate(-15%,100%);
     }
     section#login{
         width: 996px;
