--- a/estilos/style.css
+++ b/estilos/style.css
@@ -18,6 +18,19 @@ body,html{
     height:100vh;
     width:100vw;
 }
+header>h1{
+    text-align: center;
+    position: absolute;
+    top: 77px;
+    left: 20%;
+    transform: translate(-16%,100%);
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.856);
+    font-size: 45px;
+    text-decoration: underline;
+}
+header>h1:hover{
+    color: rgba(32, 59, 32, 0.87);
+}
 main{
     height:100vh;
     width:100vw;
