--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,6 +7,7 @@ tons de cores
 #a19e90
 #939394
  */
+
 *{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0px;
@@ -14,9 +15,10 @@ tons de cores
     box-sizing: border-box;
 }
 body,html{
-    background-image:linear-gradient( to left, #4d4233d7,#796451,#838074);
+    background-image:linear-gradient( to left, #4d4233d7,#796451,#494741);
     height:100vh;
     width:100vw;
+    color: white;
 }
 header>h1{
     text-align: center;
@@ -45,7 +47,7 @@ section#login{
     transition-timing-function: ease;
 
 
-    background-color: white;
+    background-color: rgba(5, 5, 5, 0.603);
     border-radius: 20px;
     width: 250px;
     height: 500px;
@@ -68,3 +70,14 @@ div#formulario>h1{
 div#formulario > p{
     font-size: 0.9em;
 }
+a#secreto{
+    text-decoration: none;
+    display: ;
+}
+a#secreto:hover{
+    display: inline;
+}
+input#f{
+    display: block;
+}
+    
