--- a/estilos/style.css
+++ b/estilos/style.css
@@ -70,13 +70,11 @@ div#formulario>h1{
 div#formulario > p{
     font-size: 0.9em;
 }
-a#secreto{
+a{
     text-decoration: none;
     display: none;
 }
-a#secreto:hover{
-    display: inline;
-}
+
 form>div.campo{
     background-color: #79645185;
     display: block;
@@ -88,7 +86,7 @@ form>div.campo{
 input#f{
     display: block;
     font-size: 1em;
-    width: 90%;
+    width: 100%;
     height: 40px;
     background-color: #79645193;
     color: white;
